--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.71.2",
     "next": "15.1.4",
+    "next-sanity": "^9.8.42",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "sanity": "^3.71.2",
+    "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
