--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.71.2",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.488.0",
     "next": "15.1.4",
     "next-sanity": "^9.8.42",
     "react": "^19.0.0",
@@ -18,7 +20,7 @@
     "react-icons": "^5.4.0",
     "sanity": "^3.71.2",
     "styled-components": "^6.1.14",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
