--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.71.2",
     "clsx": "^2.1.1",
@@ -17,7 +18,9 @@
     "next-sanity": "^9.8.42",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "sanity": "^3.71.2",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^3.2.0"
