--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "sanity": "^3.71.2",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^3.2.0"
