--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,13 @@ NEXT_PUBLIC_SANITY_DATASET=
 AUTH_SECRET=
 NEXT_AUTH_URL=
 AUTH_GOOGLE_ID=
+AUTH_GOOGLE_SECRET=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
 ADMIN_EMAIL=
+NEXT_PUBLIC_FIREBASE_KEY=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
