--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.71.2",
     "clsx": "^2.1.1",
+    "firebase": "^11.9.1",
     "lucide-react": "^0.488.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.28",
