--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.71.2",
+    "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
     "firebase": "^11.9.1",
     "lucide-react": "^0.488.0",
@@ -19,6 +20,7 @@
     "next-auth": "^5.0.0-beta.28",
     "next-sanity": "^9.8.42",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
