--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sanity": "^3.71.2",
+    "stripe": "^18.3.0",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^3.2.0"
   },
